--- a/dev/index.html
+++ b/dev/index.html
@@ -12,6 +12,7 @@
       <h2>OCaml package documentation</h2>
       <ol>
       <li><a href="ocaml-protoc/index.html">ocaml-protoc</a> <span class="version">2.1</span></li>
+      <li><a href="pbrt/index.html">pbrt</a> <span class="version">2.1</span></li>
       </ol>
       </div>
     </main>
