deploy: 736af401afba6ad9e041db6f2e4cbae1c00e8044

--- a/dev/index.html
+++ b/dev/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>index</title>
-    <link rel="stylesheet" href="./odoc.css"/>
+    <link rel="stylesheet" href="./_odoc_support/odoc.css"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   </head>
@@ -11,8 +11,8 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="ocaml-protoc/index.html">ocaml-protoc</a> <span class="version">2.3</span></li>
-      <li><a href="pbrt/index.html">pbrt</a> <span class="version">2.3</span></li>
+      <li><a href="ocaml-protoc/index.html">ocaml-protoc</a> <span class="version">2.4</span></li>
+      <li><a href="pbrt/index.html">pbrt</a> <span class="version">2.4</span></li>
       </ol>
       </div>
     </main>
