deploy: 1cc6cb701171506554a9d35af55a594e90c9fc00

--- a/dev/ocaml-protoc/Ocaml_protoc_compiler_lib/Pb_parsing_parser/index.html
+++ b/dev/ocaml-protoc/Ocaml_protoc_compiler_lib/Pb_parsing_parser/index.html
@@ -38,4 +38,7 @@
   <span><a href="../Pb_parsing_parse_tree/index.html#type-extension_range">Pb_parsing_parse_tree.extension_range</a> list</span></span></code></div></div><div class="odoc-spec"><div class="spec value anchored" id="val-reserved_"><a href="#val-reserved_" class="anchor"></a><code><span><span class="keyword">val</span> reserved_ : 
   <span><span>(<span><span class="xref-unresolved">Stdlib</span>.Lexing.lexbuf <span class="arrow">&#45;&gt;</span></span> <a href="#type-token">token</a>)</span> <span class="arrow">&#45;&gt;</span></span>
   <span><span class="xref-unresolved">Stdlib</span>.Lexing.lexbuf <span class="arrow">&#45;&gt;</span></span>
-  <span><a href="../Pb_parsing_parse_tree/index.html#type-extension_range">Pb_parsing_parse_tree.extension_range</a> list</span></span></code></div></div></div></body></html>
+  <span><a href="../Pb_parsing_parse_tree/index.html#type-extension_range">Pb_parsing_parse_tree.extension_range</a> list</span></span></code></div></div><div class="odoc-spec"><div class="spec value anchored" id="val-extend_"><a href="#val-extend_" class="anchor"></a><code><span><span class="keyword">val</span> extend_ : 
+  <span><span>(<span><span class="xref-unresolved">Stdlib</span>.Lexing.lexbuf <span class="arrow">&#45;&gt;</span></span> <a href="#type-token">token</a>)</span> <span class="arrow">&#45;&gt;</span></span>
+  <span><span class="xref-unresolved">Stdlib</span>.Lexing.lexbuf <span class="arrow">&#45;&gt;</span></span>
+  <a href="../Pb_parsing_parse_tree/index.html#type-extend">Pb_parsing_parse_tree.extend</a></span></code></div></div></div></body></html>
