deploy: d781f552979406c5721c4fdae0bf7b34556ca02e

--- a/dev/ocaml-protoc/Ocaml_protoc_compiler_lib/Pb_codegen_all/index.html
+++ b/dev/ocaml-protoc/Ocaml_protoc_compiler_lib/Pb_codegen_all/index.html
@@ -4,5 +4,6 @@
   <span><span class="label">generate_make</span>:bool <span class="arrow">&#45;&gt;</span></span>
   <span><span class="label">proto_file_options</span>:<a href="../Pb_option/index.html#type-set">Pb_option.set</a> <span class="arrow">&#45;&gt;</span></span>
   <span><span class="label">proto_file_name</span>:string <span class="arrow">&#45;&gt;</span></span>
+  <span><span class="label">services</span>:bool <span class="arrow">&#45;&gt;</span></span>
   <span><span><a href="../Pb_codegen_plugin/index.html#type-t">Plugin.t</a> list</span> <span class="arrow">&#45;&gt;</span></span>
   <a href="#type-ocaml_mod">ocaml_mod</a></span></code></div><div class="spec-doc"><p><code>codegen types</code> returns a full code listing for the <code>.ml</code> and the <code>.mli</code> files.</p></div></div></div></body></html>
